--- a/src/main/resources/view/marksmonitor/MarksMonitorCompetition.fxml
+++ b/src/main/resources/view/marksmonitor/MarksMonitorCompetition.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -258,6 +259,7 @@
                         <String fx:value="btn-small" />
                      </styleClass>
                   </Button>
+                  <ChoiceBox fx:id="competitionDay" layoutX="14.0" layoutY="6.0" prefHeight="25.0" prefWidth="268.0" stylesheets="@../../assets/css/ChoiseBox.css" />
                </children>
             </Pane>
          </children>
