--- a/src/main/resources/view/marksmonitor/CreateOrEditParticipantPopup.fxml
+++ b/src/main/resources/view/marksmonitor/CreateOrEditParticipantPopup.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -106,7 +107,6 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="130.0" stylesheets="@../../assets/css/AgreeButton.css" text="Считать чип" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
                         <GridPane GridPane.columnIndex="2" GridPane.rowIndex="5">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -124,16 +124,22 @@
                               <RadioButton fx:id="maleGenderRadioButton" mnemonicParsing="false" text="Ж" toggleGroup="$genderToggleGroup" GridPane.columnIndex="1" />
                            </children>
                         </GridPane>
-                        <Button fx:id="saveButt" mnemonicParsing="false" onAction="#saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@../../assets/css/AgreeButton.css" text="Сохранить" GridPane.halignment="CENTER" GridPane.rowIndex="9">
+                        <Button fx:id="saveButt" mnemonicParsing="false" onAction="#saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@../../assets/css/AgreeButton.css" text="Сохранить" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="8">
                            <GridPane.margin>
-                              <Insets right="30.0" />
+                              <Insets right="10.0" />
                            </GridPane.margin>
                         </Button>
                         <Button fx:id="cancelButt" mnemonicParsing="false" onAction="#cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@../../assets/css/DisagreeButton.css" text="Отменить" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="9">
                            <GridPane.margin>
-                              <Insets left="30.0" />
+                              <Insets right="10.0" />
                            </GridPane.margin>
                         </Button>
+                        <Label text="Дистанция" GridPane.rowIndex="8">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <ChoiceBox fx:id="distanceChoiceBox" prefWidth="150.0" GridPane.rowIndex="9" />
                      </children>
                   </GridPane>
                   <TableView fx:id="sportsmenTableView" prefHeight="116.0" prefWidth="516.0" GridPane.columnIndex="1">
